pypi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pypi-server
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: pypi-server
  template:
    metadata:
      labels:
        app: pypi-server
    spec:
      containers:
        - name: pypi-server
          image: pypiserver/pypiserver:latest
          imagePullPolicy: Always
          args: [
            "-P", "/data/auth/htpasswd",
            "-a", "update",
            "/data/packages"
          ]
          ports:
            - containerPort: 80
          volumeMounts:
            - name: pypi-data-volume
              mountPath: /data/packages
            - name: pypi-auth
              mountPath: /data/auth
      volumes:
        - name: pypi-data-volume
          persistentVolumeClaim:
            claimName: pypi-storage
        - name: pypi-auth
          secret:
            secretName: pypi-auth
