pypi/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pypi-server
  name: pypi-server
spec:
  ports:
    - port: 8080
  selector:
    app: pypi-server
